유저 인버터 기록리스트 추가